--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,6 @@ deploy:
     secure: KcBpkFaes74KGMm8X/rRA8e13+t3PmkefsAvOAR+iF4g1GyuLSPkP92Fb9vFfsXBph+qmFh5rNa2lIRf/3RXW6COxY7CMMaARxUfJOKE0rmIwF0qfKI+RZDh6abg92iYngunMZVN8WVft6Lv9ZTOYCWxr1Zs1Ll/Rl4PfvHNd1g=
   gem: travis
   on:
-    repo: travis-ci/travis
+    repo: travis-ci/travis.rb
     ruby: 2.0.0
     condition: "$(uname) = Darwin"
