Install Ruby 1.9.3-p545 under certain circumstances
To deploy, we need 1.9.3-p545 on the Mac image when running with
Ruby 2.0.0. See https://github.com/travis-ci/travis-ci/issues/2202
for details.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ rvm:
 os:
 - linux
 - osx
+
+before_script:
+  - if [[ $TRAVIS_RUBY_VERSION = '2.0.0' && $(uname) = 'Darwin' ]]; then rvm install ruby-1.9.3-p545 && rvm use $TRAVIS_RUBY_VERSION --fuzzy; fi
+
 matrix:
   exclude:
     - rvm: 1.8.7
