Delay installing 1.9.3 until right before deployment
There is no need to install it if we don't have to deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ os:
 - linux
 - osx
 
-before_script:
+after_success:
   - if [[ $TRAVIS_RUBY_VERSION = '2.0.0' && $(uname) = 'Darwin' ]]; then rvm install ruby-1.9.3-p545 && rvm use $TRAVIS_RUBY_VERSION --fuzzy; fi
 
 matrix:
