--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ os:
 - linux
 - osx
 
-after_success:
+before_deploy:
   - if [[ $TRAVIS_RUBY_VERSION = '2.0.0' && $(uname) = 'Darwin' ]]; then rvm install ruby-1.9.3-p545 && rvm use $TRAVIS_RUBY_VERSION --fuzzy; fi
 
 matrix:
