--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,15 @@ rvm:
   - 1.9.3
   - 2.0.0
   - 2.1.0
+  - 2.1.1
+  - 2.1.2
   - 2.1.3
+  - 2.1.4
   - 2.1.5
   - 2.2.0
+  - 2.2.1
   - jruby
+  - rbx-2
 os:
   - linux
   - osx
