--- a/spec/support/fake_travis_config.yml
+++ b/spec/support/fake_travis_config.yml
@@ -10,3 +10,5 @@ endpoints:
     access_token: fake-travis-com-token
   https://api.travis-ci.org/:
     access_token: fake-travis-org-token
+  https://travis-ci-enterprise/api:
+    access_token: fake-travis-enterprise-token
