--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ cache: bundler
 
 os:
   - linux
-  - osx
 
 rvm:
   - jruby
@@ -13,20 +12,17 @@ rvm:
   - 2.1.0
   - 2.1.5
 
-matrix:
-  exclude:
-    - rvm: 1.9.2
-      os: osx
-    - rvm: 1.9.3
-      os: osx
-    - rvm: jruby
-      os: osx
-
 jobs:
   include:
     - os: osx
       osx_image: xcode7.3
       rvm: 1.9.3
+    - os: osx
+      rvm: 2.0.0
+    - os: osx
+      rvm: 2.1.0
+    - os: osx
+      rvm: 2.1.5
     - stage: deploy
       if: branch = master
       os: linux
