--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ os:
 
 rvm:
   - jruby
-  - "2.3"
   - "2.4"
   - "2.5"
   - "2.6"
@@ -14,6 +13,9 @@ rvm:
 
 jobs:
   include:
+    - rvm: "2.3"
+      before_script:
+        - gem install faraday -v 1.0.1
     - os: osx
       rvm: "2.5"
     - os: osx
