--- a/.travis.yml
+++ b/.travis.yml
@@ -32,3 +32,6 @@ script:
   - bundle exec rake
   - gem build travis.gemspec
   - gem install travis-*.gem
+
+before_install:
+  - gem install rubygems-update -v 3.4.22
