--- a/.travis.yml
+++ b/.travis.yml
@@ -14,14 +14,9 @@ jobs:
       before_script:
         - gem install faraday -v 1.0.1
     - os: osx
-      rvm: "3.2"
-    - os: osx
-      before_install:
-        - brew update
-        - brew install rbenv
-        - rbenv install 3.2
-        - rbenv global 3.2
-      rvm: "3.2"
+      rvm:
+        - "3.1"
+        - "3.2"
     - stage: deploy
       if: repo = travis-ci/travis.rb and branch = master and type = push
       os: linux
