--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,13 @@ jobs:
       before_script:
         - gem install faraday -v 1.0.1
     - os: osx
-      osx_image: xcode11.4.1
-      rvm: "3.2"
+      # Broken ruby 3.2 workaround
+      before_script:
+        - rvm get stable && rvm reload && rvm install 3.2.5 --verify-downloads 1 --disable-install-doc -C --without-tcl,--without-tk,--without-gmp && rvm use 3.2.5 --default
     - os: osx
       osx_image: xcode11.4.1
-      rvm: "3.2"
+      before_script:
+        - rvm get stable && rvm reload && rvm install 3.2.5 --verify-downloads 1 --disable-install-doc -C --without-tcl,--without-tk,--without-gmp && rvm use 3.2.5 --default
     - stage: deploy
       if: repo = travis-ci/travis.rb and branch = master and type = push
       os: linux
